layouts and colors

--- a/language/en-GB/en-GB.tpl_jovocleague.ini
+++ b/language/en-GB/en-GB.tpl_jovocleague.ini
@@ -250,3 +250,16 @@ FEATURES_DESCRIPTION_LABEL 		="Feature Description"
 FEATURES_IMAGE_DESC 			="Add Feature Image"
 FEATURES_TITLE_DESC 			="Add Feature Title"
 FEATURES_DESCRIPTION_DESC 		="Add Feature Description"
+
+;TEAM LOGOS
+CLIENTS_BASIC_LABEL 		="General Settings"
+CLIENTS_BASIC_DESC 			=""
+ACM_COLUMNS_LABEL			="Column Setting"
+ACM_COLUMNS_DESC			="Set number of columns to show client images"
+CLIENTS_IMG_OPACITY_LABEL 	="Client Images Opacity"
+CLIENTS_IMG_OPACITY_DESC 	="Set opacity for the client images, from 0 to 100"
+CLIENT_ITEM_LABEL 			="Client Details"
+CLIENT_ITEM_DESC 			=""
+CLIENT_ITEM_LOGO_LABEL		="Client Logo"
+CLIENT_ITEM_NAME_LABEL	 	="Client Name"
+CLIENT_ITEM_LINK_LABEL		="Client website link"
