--- a/language/en-GB/en-GB.tpl_jovocleague.ini
+++ b/language/en-GB/en-GB.tpl_jovocleague.ini
@@ -106,7 +106,7 @@ TPL_JA_FINDUS_POSITION_DEBUG = "debug"
 
 ; Listing Info
 TPL_OVERVIEW = "Overview"
-TPL_BUSINESS_INFO = "Business Info"
+TPL_BUSINESS_INFO = "Player Info"
 TPL_LISTING_INFO_LABEL = "Info"
 TPL_LISTING_INFO = "Info"
 TPL_LISTING_LOCATION_LT = "Map Location"
@@ -155,7 +155,7 @@ TPL_SHOW_LINK_CATEGORY_DESC 	="Select Yes to show the View More button"
 TPL_TITLE_CATEGORY_DESC 		="Add Button Label"
 TPL_LINK_CATEGORY_DESC  		="Select a menu to link the Button"
 
-TPL_GROUP_EXTRA_FIELDS_LABEL 	="Listing Fields"
+TPL_GROUP_EXTRA_FIELDS_LABEL 	="Player information"
 TPL_LISTING_GALLERY_LABEL 		="Image Gallery"
 TPL_LISTING_OPTIONS 			="Field Settings"
 TPL_LISTING_IMAGE_LABEL  		="Image Gallery"
