League table table UI

--- a/language/en-GB/en-GB.tpl_jovocleague.ini
+++ b/language/en-GB/en-GB.tpl_jovocleague.ini
@@ -116,6 +116,10 @@ TPL_LISTING_LOCATION_DESC = "Address"
 TPL_SOCIAL = "Social"
 TPL_LISTING = "Listings"
 
+;LEAGUE TABLE INFO
+TPL_TABLE_INFO="Enter each team's stats below"
+TPL_LEAGUE_TABLE_INFO_LABEL = "Season table stats"
+
 TPL_TIME_OPEN = "Time Open"
 TPL_TIME_OPEN_DESC = "Time Open"
 TPL_TIME_CLOSE = "Time Close"
