--- a/language/en-GB/en-GB.tpl_jovocleague.sys.ini
+++ b/language/en-GB/en-GB.tpl_jovocleague.sys.ini
@@ -63,3 +63,6 @@ TPL_PAGE_HEADING_BG_IMG_DESC = "Masthead Background Image"
 TPL_CONTENT_CATEGORY_VIEW_LISTINGS_TITLE = "View Listings"
 TPL_CONTENT_CATEGORY_VIEW_LISTINGS_DESC = "Displays article introductions in a single or multi-column layout."
 
+;LEAGUE TABLE INFO
+TPL_TABLE_INFO="Enter each team's stats below"
+TPL_LEAGUE_TABLE_INFO_LABEL = "Season table stats"
